# ComfyUI_CSM

./: CSMNode.py  MWAudioRecorderCSM.py  README-CN.md  README.md  __init__.py  models.py  pyproject.toml  requirements.txt
example_workflows/: Multi-User Dialogue.json  Recording dialogue.json  Text to speech and watermarking.json  已保存说话者.json  未保存说话者.json
